2011-02-17  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: bug fix: Fixed one of the issues causing mmg to report that
	it is configured to use an unsupported version of mkvmerge when
	the reported version was actually empty.

	* mkvmerge: enhancement: HD-DVD subtitles are recognized as being
	an unsupported file format. This makes the error message presented
	to the user a bit clearer. Fix for bug 600.

2011-02-15  Moritz Bunkus  <moritz@bunkus.org>

	* build: Boost 1.36.0 or newer is required (up from 1.34.0). Also
	fixed building with v3 of Boost's filesystem library, e.g. with
	Boost 1.46.0 Beta 1 or newer.

	* mkvpropedit: new feature: Added support for adding, replacing
	and removing tags.

2011-02-07  Moritz Bunkus  <moritz@bunkus.org>

	* all: Added a translation for the programs into Turkish by
	ßouЯock (see AUTHORS).

2011-02-06  Moritz Bunkus  <moritz@bunkus.org>

	* build system: Fixed compilation if configure choses the internal
	versions of libebml and libmatroska while older versions are still
	installed in a location named with "-I..." or "-L..." in
	CFLAGS/CXXFLAGS/LDFLAGS or with configure's
	"--with-extra-includes" and "--with-extra-libs" options.

2011-01-31  Moritz Bunkus  <moritz@bunkus.org>

	* Released v4.5.0.

	* build: Building mkvtoolnix now requires libebml v1.2.0 and
	libmatroska v1.1.0 or later.

	* build: enhancement: mkvtoolnix now includes libebml and
	libmatroska. The configure script will use them if either no
	installed versions of them is found or if the installed version is
	too old.

2011-01-25  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed an infinite loop when reading program
	stream maps in MPEG program streams. Part of a fix for bug 589.

2011-01-21  Moritz Bunkus  <moritz@bunkus.org>

	* mkvinfo: new feature: Added an option "--track-info" (short:
	"-t") that displays one-line statistics about each track at the
	end of the output. The statistics include the track's total size,